--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "url": "https://github.com/wavesplatform/waves-crypto.git"
   },
   "dependencies": {
+    "@jest/core": "^29.7.0",
+    "jest-cli": "^29.7.0",
+    "jest-config": "^29.7.0",
     "js-sha3": "^0.8.0",
     "node-forge": "^1.3.1"
   },
@@ -53,9 +56,9 @@
     "rimraf": "^2.6.3",
     "ts-jest": "^29.3.2",
     "ts-loader": "^6.0.2",
-    "ts-node": "^8.2.0",
+    "ts-node": "^10.9.2",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
+    "typescript": "^4.9.5",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1"
   }
