--- a/package.json
+++ b/package.json
@@ -39,14 +39,17 @@
     "@jest/core": "^29.7.0",
     "jest-cli": "^29.7.0",
     "jest-config": "^29.7.0",
+    "js-md5": "^0.8.3",
+    "js-sha256": "^0.11.0",
     "js-sha3": "^0.8.0",
-    "node-forge": "^1.3.1"
+    "node-forge": "^1.3.1",
+    "node-rsa": "^1.1.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/ncp": "^2.0.1",
     "@types/node": "^10.9.4",
-    "@types/node-forge": "^0.8.4",
+    "@types/node-forge": "^0.8.7",
     "@types/rimraf": "^2.0.2",
     "jest": "^29.7.0",
     "ncp": "^2.0.0",
