--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ts-lib-crypto-faso",
-  "version": "1.4.2",
+  "name": "ts-lib-crypto-faso2",
+  "version": "1.4.5",
   "description": "This library contains all algorithm implementations like signature verification and protocol entries like address used in Waves.",
   "keywords": [
     "waves",
@@ -12,11 +12,12 @@
   ],
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "type": "module",
   "scripts": {
     "postversion": "npm run build; cd dist; npm publish",
     "postpublish": "git push origin head",
-    "build": "ts-node build/build.ts cp src/libs/*.d.ts dist/libs;cp src/libs/*.js dist/libs && npm run build-min",
-    "build-min": "webpack --config webpack.config.js --env",
+    "build": "ts-node build/build.ts cp src/libs/*.d.ts dist/libs;cp src/libs/*.js dist/libs; cp package.json dist/; cp -r src/* dist/ && npm run build-min",
+    "build-min": "webpack --config webpack.config.js",
     "deploy": "cd dist; npm publish;",
     "deploy-beta": "cd dist; npm publish -tag beta;",
     "fix-style": "tslint --fix -c tslint.json '{src,test,usage}/**/*{.ts,.tsx}'",
@@ -37,28 +38,32 @@
   },
   "dependencies": {
     "@jest/core": "^29.7.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "jest-cli": "^29.7.0",
     "jest-config": "^29.7.0",
     "js-md5": "^0.8.3",
     "js-sha256": "^0.11.0",
     "js-sha3": "^0.8.0",
     "node-forge": "^1.3.1",
-    "node-rsa": "^1.1.1"
+    "node-rsa": "^1.1.1",
+    "stream-browserify": "^3.0.0",
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/ncp": "^2.0.1",
-    "@types/node": "^10.9.4",
+    "@types/node": "^22.14.1",
     "@types/node-forge": "^0.8.7",
     "@types/rimraf": "^2.0.2",
     "jest": "^29.7.0",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.3",
     "ts-jest": "^29.3.2",
-    "ts-loader": "^6.0.2",
+    "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tslint": "^5.18.0",
-    "typescript": "^4.9.5",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.6",
     "webpack-cli": "^6.0.1"
   }
